[package]
name = "timeout-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "func"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[target.'cfg(target_family = "wasm")'.dependencies]
tokio_wasi = { version = "1.25.1", features = ["macros", "rt", "time"] }

[target.'cfg(target_family = "unix")'.dependencies]
axum = "0.6.1"
tokio = {version = "1.0", features = ["full"]}
tower = {version = "0.4.13", features = ["timeout"]}
wasmedge-sdk = {version = "0.7.1", features = ["async"]}
